--- a/stylesheets/animations.css
+++ b/stylesheets/animations.css
@@ -4,12 +4,7 @@
     0% {
         margin-top: 10px;
     }
-    25% {
-        margin-top: 5px;
-    }
-    50% {
-        margin-top: 5px;
-    }
+
     100% {
         margin-top: 0px;
     }
@@ -32,4 +27,10 @@
     100% {
         opacity: 0;
     }
+}
+
+/* Moves rocket forward */
+@keyframes flying {
+  0%   {margin-left: 350px; margin-top: 300px;}
+  100% {margin-left: 550px; margin-top: -550px;}
 }
