--- a/stylesheets/characters.css
+++ b/stylesheets/characters.css
@@ -9,8 +9,8 @@
     margin-top: 5%;
 
     box-shadow: 
-        5px 5px 5px grey,
-        5px 5px 5px lightgrey;
+        3px 3px 3px grey,
+        3px 3px 3px lightgrey;
 }
 
 .crater {
@@ -24,11 +24,15 @@
 }
 
 #smile {
-    border-bottom: solid black 2px;
-    border-radius: 38%;
     height: 25px;
     width: 25px;
     margin-left: 25%;
+    animation-name: mouth;
+    animation-duration: 2s;
+    animation-timing-function: ease;
+    animation-duration: 8s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
 .eye {
@@ -39,6 +43,19 @@
     margin-top: 10px;
     animation-name: eyes;
     animation-duration: 10s;
+    animation-fill-mode: forwards;
+}
+
+#arm {
+    height: 80px;
+    width: 5px;
+    background-color: grey;
+    margin-left: 130px;
+    margin-top: -100px;
+    animation-name: wave;
+    animation-duration: 5s;
+    animation-timing-function: ease;
+    animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
 
