--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,12 +2,42 @@ body {
     padding: 0;
     margin: 0;
 }
-
+/* Div holding all content */
 #intro-section {
    width: 100%;
    height: 500px;
    border: black 2px solid;
+   background-color: #1A1126;
    overflow: hidden;
 }
+/* Moon's text */
+#speech {
+    color: white;
+    font-size: 25px;
+    text-align: center;
+    animation-name: speech;
+    animation-duration: 7s;
+    animation-delay: 1s;
+    animation-fill-mode: forwards;
+}
 
+#sad-speech {
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    opacity: 0;
+    animation-name: sad-speech;
+    animation-duration: 10s;
+    animation-delay: 3s;
+    animation-fill-mode: forwards;
+}
+
+/* Stars divs */
+.stars {
+    color: yellow;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    position: absolute;
+}
 
