--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,11 +1,12 @@
 body {
     padding: 0;
     margin: 0;
+    font-family: 'Architects Daughter', cursive;
 }
 /* Div holding all content */
 #intro-section {
    width: 100%;
-   height: 500px;
+   height: 650px;
    border: black 2px solid;
    background-color: #1A1126;
    overflow: hidden;
@@ -15,8 +16,10 @@ body {
     color: white;
     font-size: 25px;
     text-align: center;
+    opacity: 0;
+    margin-top: 8%;
     animation-name: speech;
-    animation-duration: 7s;
+    animation-duration: 6s;
     animation-delay: 1s;
     animation-fill-mode: forwards;
 }
@@ -34,10 +37,53 @@ body {
 
 /* Stars divs */
 .stars {
-    color: yellow;
+    background-color: yellow;
     border-radius: 50%;
     width: 25px;
     height: 25px;
     position: absolute;
+}
+
+.stars:nth-child(1) {
+    margin-top: 5%;
+    margin-left: 90%;
+}
+
+.stars:nth-child(2) {
+    margin-top: 5%;
+    margin-left: 55%;
+}
+
+.stars:nth-child(3) {
+    margin: 15%;
+}
+
+.stars:nth-child(4) {
+    margin: 8%;
+}
+
+.stars:nth-child(5) {
+    margin: 25%;
+}
+
+.stars:nth-child(6) {
+    margin-top: 25%;
+    margin-left: 45%;
+}
+
+.stars:nth-child(7) {
+    margin-top: 25%;
+    margin-left: 75%;
+}
+
+.stars:nth-child(8) {
+    margin-top: 5%;
+    margin-left: 45%;
+    
+}
+
+.stars:nth-child(9) {
+    margin-top: 10%;
+    margin-left: 35%;
 }
 
