--- a/hobbes-stylingsheets/main.css
+++ b/hobbes-stylingsheets/main.css
@@ -1,14 +1,102 @@
 #main-container {
     border: solid black 2px;
     height: 600px;
+    padding: 10%;
+    margin-top: 1%;
+}
+/* Head */
+#head {
+    width: 120px;
+    height: 150px;
+    background-color: orangered;
+    border-radius: 50%;
+    position: absolute;
+
+    margin-left: 615px;
+    margin-top: -50px;
+    text-align: center;
 }
 
+#nose {
+    width: 30px;
+    height: 15px;
+    background-color: black;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    border-bottom-left-radius: 998%;
+    border-bottom-right-radius: 998%;
+
+    margin-top: 5%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#ears-container {
+    text-align: center;
+    padding-bottom: 15px;
+}
+
+
+.ears {
+    height: 55px;
+    width: 45px;
+    background-color: black;
+    display: inline-block;
+    border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
+
+    margin-top: -2px;
+    margin-left: 6px;
+    margin-right: 6px;
+    position: relative;
+}
+
+#ear-1 {
+    transform: rotate(330deg);
+}
+
+#ear-2 {
+    transform: rotate(33deg);
+}
+
+.eyes {
+    height: 20px;
+    width: 20px;
+    background-color: black;
+    display: inline-block;
+    border-radius: 50%;
+
+    margin-top: 25px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.mouth {
+    width: 2px;
+    height: 15px;
+    background-color: black;
+    margin-bottom: 55px;
+    margin-left: auto;
+    margin-right: auto;
+    display: inline-block;
+}
+
+#mouth-1 {
+    transform: rotate(30deg);
+}
+
+#mouth-2 {
+    transform: rotate(160deg);
+}
+
+
+/* Body */
 #hobbes-body {
     height: 250px;
     width: 150px;
     border-color: black solid 2px;
     background-color: orangered;
-    margin-top: 10%;
+    margin-top: 5%;
     margin-left: auto;
     margin-right: auto;
     padding-top: 15px;
@@ -23,15 +111,15 @@
     margin-right: auto;
     margin-left: auto;
 }
-
+/* styling for left arm */
 #left-arm {
     height: 150px;
     width: 50px;
     background-color: orangered;
     border-radius: 50%;
-    transform: rotate(85deg);
+    transform: rotate(115deg);
     position: absolute;
-    margin-top: -210px;
+    margin-top: -250px;
     margin-left: -75px;
 } 
 
@@ -45,11 +133,39 @@
      margin-left: 10px;
 }
 
+.left-arm-stripes {
+    height: 44px;
+    width: 10px;
+    background-color: black;
+    border: black solid 2px;
+    border-bottom-right-radius: 50%;
+    border-top-left-radius: 50%;
+
+    transform: rotate(90deg);
+    margin-left: 5px;
+    margin-bottom: -95px;
+    margin-top: -50px
+}
+
+#left-arm-stripe-2 {
+    height: 40px;
+    transform: rotate(89deg);
+    border-bottom-right-radius: 50%;
+    border-top-left-radius: 50%;
+
+    margin-left: 7px;
+}
+
+/* Stripes for the belly */
+
 .stripes-left {
     height: 20px;
     width: 10px;
     background-color: black;
     transform: rotate(90deg);
+
+    border-bottom-right-radius: 50%;
+    border-top-left-radius: 50%;
 }
 
 #stripe-1 {
@@ -80,6 +196,176 @@
     transform: rotate(66deg);
 }
 
+/* Right arm styling */
+#right-arm {
+    height: 150px;
+    width: 50px;
+    background-color: orangered;
+    border-radius: 50%;
+    transform: rotate(275deg);
+    position: absolute;
+    margin-top: -210px;
+    margin-left: 175px;
+} 
 
+#right-hand {
+     border-radius: 50%;
+     background-color: white;
+     border: solid black 2px;
+     height: 35px;
+     width: 30px;
+     margin-top: 115px;
+     margin-left: 10px;
+}
 
+.right-arm-stripes {
+    height: 44px;
+    width: 10px;
+    background-color: black;
+    border: black solid 2px;
+    border-bottom-right-radius: 50%;
+    border-top-left-radius: 50%;
 
+    transform: rotate(90deg);
+    margin-left: 5px;
+    margin-bottom: -95px;
+    margin-top: -50px
+}
+
+#right-arm-stripe-2 {
+    height: 40px;
+    transform: rotate(89deg);
+    border-bottom-right-radius: 50%;
+    border-top-left-radius: 50%;
+
+    margin-left: 7px;
+}
+
+/* stripes for right side of belly */
+.stripes-right {
+    height: 20px;
+    width: 10px;
+    background-color: black;
+    transform: rotate(90deg);
+
+    border-bottom-left-radius: 50%;
+    border-top-right-radius: 50%;
+}
+
+#stripe-5 {
+    height: 17px;
+    margin-top: -185px;
+    margin-left: 114px;
+    transform: rotate(245deg);
+}
+
+#stripe-6 {
+    margin-top: 50px;
+    margin-left: 132px;
+    height: 23px;
+    transform: rotate(90deg);
+}
+
+#stripe-7 {
+    margin-top: 25px;
+    margin-left: 129px;
+    height: 28px;
+    transform: rotate(90deg);
+}
+
+#stripe-8 {
+    margin-top: 8px;
+    margin-left: 116px;
+    height: 35px;
+    transform: rotate(97deg);
+}
+
+/* Left Leg */
+#left-leg {
+    height: 175px;
+    width: 60px;
+    background-color: orangered;
+    border-radius: 50%;
+    transform: rotate(35deg);
+
+    margin-top: -15px;
+    margin-left: -25px;
+}
+
+#left-foot {
+    border-radius: 50%;
+     background-color: white;
+     border: solid black 2px;
+     height: 45px;
+     width: 40px;
+     position: absolute;
+
+     margin-top: 126px;
+     margin-left: 10px;
+}
+
+.left-leg-stripes {
+    height: 55px;
+    width: 10px;
+    background-color: black;
+    border: black solid 2px;
+    border-bottom-right-radius: 50%;
+    border-top-left-radius: 50%;
+
+    transform: rotate(91deg);
+    margin-left: 11px;
+    margin-bottom: -100px;
+    margin-top: -50px
+}
+
+/* Right leg */
+
+#right-leg {
+    height: 175px;
+    width: 60px;
+    background-color: orangered;
+    border-radius: 50%;
+    transform: rotate(135deg);
+
+    margin-top: -170px;
+    margin-left: 130px;
+}
+
+#right-foot {
+    border-radius: 50%;
+     background-color: white;
+     border: solid black 2px;
+     height: 45px;
+     width: 40px;
+     position: absolute;
+
+     margin-left: 10px;
+}
+
+#right-leg-stripes-2 {
+    height: 47px;
+    width: 10px;
+    background-color: black;
+    border: black solid 2px;
+    border-bottom-left-radius: 50%;
+    border-top-right-radius: 50%;
+
+    transform: rotate(280deg);
+    margin-left: 11px;
+    margin-bottom: -35px;
+    margin-top: 40px
+}
+
+#right-leg-stripes-1 {
+    height: 55px;
+    width: 10px;
+    background-color: black;
+    border: black solid 2px;
+    border-bottom-left-radius: 50%;
+    border-top-right-radius: 50%;
+
+    transform: rotate(265deg);
+    margin-left: 11px;
+    margin-bottom: -35px;
+    margin-top: 40px
+}
